fixed an issue on mobile where screen is too wide. Added drop down for course nav.

--- a/public/Kanbas/Courses/Modules/index.css
+++ b/public/Kanbas/Courses/Modules/index.css
@@ -35,3 +35,10 @@
   margin-left: 20px;
   margin-right: 3px;
 }
+
+button[aria-expanded=true] .fa-chevron-up{
+    display: none;
+ }
+button[aria-expanded=false] .fa-chevron-down{
+  display: none;
+}
